[project]
name = "retriever"
version = "0.1.0"
description = "A Translator KP that aims to construct responses composed of knowledge from all other KPs"
authors = [
    { name = "tokebe", email = "43009413+tokebe@users.noreply.github.com" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13, <3.14"
dependencies = [
    "redis>=5.0.4,<6",
    "httpx>=0.28.1,<0.29",
    "uvicorn[standard]>=0.32.1,<0.33",
    "fastapi[standard]>=0.115.6,<0.116",
    "pydantic[email]>=2.10.3,<3",
    "pydantic-settings>=2.6.1,<3",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "sentry-sdk[fastapi,httpx,loguru]>=2.45.0",
    "motor>=3.7.0",
    "loguru>=0.7.3",
    "bmt>=1.4.6",
    "pyinstrument>=5.0.1",
    "pydantic-file-secrets>=0.4.4",
    "pyyaml>=6.0.2",
    "pymongo>=4.12.0",
    "reasoner-pydantic>=6.0.0,<7",
    "ruamel-yaml>=0.18.14",
    "pydantic-core>=2.33.1",
    "orjson>=3.11.2",
    "zstandard>=0.24.0",
    "ormsgpack>=1.10.0",
    "uvloop>=0.21.0",
    "click>=8.1.8",
    "elasticsearch[async]>=8,<9",
    "elastic-transport>=8,<9",
    "pydgraph>=24.3.0",
    "grpcio>=1.65.1",
    "aiohttp>=3.9.0",
    "cachetools>=5.3.1",
    "msgpack>=1.1.1",
]

[project.scripts]
retriever = "retriever.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.8.2,<0.9",
    "yamllint>=1.35.1,<2",
    "yamlfix>=1.17.0,<2",
    "taskipy>=1.14.1",
    "locust>=2.33.2",
    "pyinstrument>=5.0.1",
    "basedpyright>=1.29.4",
    "pre-commit>=4.2.0",
    "deptry>=0.23.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "bpython>=0.25",
    "msgpack-types>=0.5.0",
]

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.taskipy.tasks]
# Code work
hook = "pre-commit install"
lint = 'ruff check src'
'lint:stats' = 'task lint --statistics'
'lint:watch' = 'task lint --watch'
'lint:fix' = 'task lint --fix'

typecheck = 'basedpyright src'
'typecheck:watch' = 'task typecheck --watch'

format = 'ruff format --diff src'
'format:fix' = 'ruff format src'

test = 'pytest --cov=src --cov-config=pyproject.toml --cov-report term-missing'

fixup = """
echo 'Linting...' &&
task lint:fix &&
echo 'Formatting...' &&
task format:fix &&
echo 'Static analysis...' &&
task typecheck &&
echo 'Check dependencies...' &&
deptry src &&
echo "✅ All set!"
"""

'dragonfly:start' = """
    echo "starting dragonfly..." \
    && docker run \
        --name test-dragonfly \
        -d \
        -p 6379:6379 \
        --ulimit memlock=-1 \
        docker.dragonflydb.io/dragonflydb/dragonfly:v1.35.0
"""
'dragonfly:stop' = 'echo "stopping dragonfly..." && docker rm --force test-dragonfly'
dragonfly = 'task dragonfly:stop && task dragonfly:start'

'mongo:start' = 'echo "starting mongodb..." && docker run --name test-mongodb -p 27017:27017 -d mongodb/mongodb-community-server:7.0-ubuntu2204'
'mongo:stop' = 'echo "stopping mongodb..." && docker rm -f test-mongodb'
mongo = 'task mongo:stop && task mongo:start'


'dbs:start' = 'task dragonfly:start && task mongo:start'
'dbs:stop' = 'task dragonfly:stop && task mongo:stop'
dbs = 'task dbs:stop && task dbs:start'

'jaeger:start' = """
    echo "starting jaeger..." \
    && docker run \
        -d \
        --name test-jaeger \
        -p 16686:16686 \
        -p 4317:4317 \
        -p 4318:4318 \
        jaegertracing/all-in-one:1.75.0
"""
'jaeger:stop' = 'echo "stopping jaeger..." && docker rm --force test-jaeger'
'jaeger:open' = 'python -m webbrowser http://localhost:16686'
jaeger = 'task jaeger:stop && task jaeger:start'

launch = 'retriever'
'launch:debug' = """
    DEBUG=true \
    LOG_LEVEL=TRACE \
    JOB__LOOKUP__TIER0_TIMEOUT=-1 \
    JOB__LOOKUP__TIER1_TIMEOUT=-1 \
    JOB__LOOKUP__TIER2_TIMEOUT=-1 \
    JOB__METAKG__TIMEOUT=-1 \
    WORKERS=1 \
    retriever
"""

start = 'task dbs && task launch'
dev = 'task dbs && task launch:debug'
'dev:otel' = """
    task jaeger \
    && task dbs \
    && sleep 1 \
    && TELEMETRY__OTEL_ENABLED=true \
    TELEMETRY__OTEL_HOST=localhost \
    TELEMETRY__OTEL_PORT=4318 \
    launch:debug
"""

# Config work
yamllint = 'yamllint .'
yamlfix = 'yamlfix --exclude ".venv/**/*" .'

# Cleanup
rmlogs = "rm ./logs/* && echo 'Logs deleted.'"

[tool.hatch.build.targets.sdist]
include = ["src/retriever"]

[tool.hatch.build.targets.wheel]
include = ["src/retriever"]

[tool.hatch.build.targets.wheel.sources]
"src/retriever" = "retriever"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
include = ["src/*"]
line-length = 88
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004", "ANN201"]

[tool.ruff.lint]
select = [
    # All of these were carefully chosen, see https://docs.astral.sh/ruff/rules
    # Pyflakes
    'F',
    # Pycodestyle errors, warning
    'E4',
    'E7',
    'E9',
    'W',
    # isort (sort imports)
    'I',
    # Pydocstyle (document your code!)
    'D',
    # Pep8 naming conventions (but slightly less pedantic)
    'N80',
    # Pyupgrade (use newer conventions)
    'UP',
    # Flake8-bugbear
    'B',
    # Flake8-annotations (require type annotations)
    'ANN0',
    'ANN2',
    # Flake8-builtins (don't overwrite builtins)
    'A',
    # Flake8-comprehensions
    'C4',
    # Flake8-logging-format
    'G',
    # Flake8-simplify
    'SIM',
    # Flake8-use-pathlib (pathlib is just better)
    'PTH',
    # Pylint
    'PL',
    # FastAPI
    'FAST',
    # Perflint
    'PERF',
    # Refurb
    'FURB',
    # Ruff-specific
    'RUF',
]
ignore = ['D100', 'D206', 'D300']

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
# Make any allowable. Builtins sometimes deal in Any and aren't worth the extra modeling
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false # Just makes code look worse; Usually unused results are deliberately ignored
reportMissingTypeStubs = false # Sometimes type stubs aren't available and auto-gen is incorrect

[tool.yamlfix]
line_length = 88

[tool.deptry]
extend_exclude = ["locustfile.py", "tests"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "orjson", # Used by FastAPI to speed up JSON serialization
]

[tool.pytest.ini_options]
norecursedirs = ["utils"]

[tool.coverage.run]
branch = true
relative_files = true
omit = ["tests/*"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
include_namespace_packages = true
